# Direct3D-crossplatform-example

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  mingw-toolchain.cmake  shader_compiler.c  shader_compiler.cpp  shader_compiler.h
